--- a/app/src/main/res/layout/activity_disposable.xml
+++ b/app/src/main/res/layout/activity_disposable.xml
@@ -7,19 +7,19 @@
     tools:context=".DisposableActivity">
 
 
-
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mapFragment"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="411dp"
-        android:layout_height="441dp"
+        android:layout_height="653dp"
 
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.512" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -40,7 +40,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/leaguespartanbold"
-            android:text="Disposable"
+            android:text="Your Location"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,15 +52,5 @@
 
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
