--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="368dp"
             android:fontFamily="@font/leaguespartanbold"
-            android:text="Non-Disposable"
+            android:text="House Locations"
             android:textColor="@color/black"
             android:textSize="23sp"
             app:layout_constraintBottom_toTopOf="@+id/cardView2"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:fontFamily="@font/leaguespartanbold"
-            android:text="Disposable"
+            android:text="Your Location"
             android:textColor="@color/black"
             android:textSize="23sp"
             app:layout_constraintBottom_toTopOf="@+id/cardView1"
