--- a/app/src/main/res/layout/activity_non_disposable.xml
+++ b/app/src/main/res/layout/activity_non_disposable.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,99 +8,53 @@
     android:layout_height="match_parent"
     tools:context=".NonDisposableActivity">
 
-    <EditText
-        android:id="@+id/editTextFullName"
+    <fragment
+        android:id="@+id/mapFragment2"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/leaguespartanbold"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Full Name" />
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:id="@+id/editTextEmail"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/leaguespartanbold"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/editTextFullName"
-        android:layout_margin="16dp"/>
+        android:layout_height="40dp"
+        android:background="@color/green"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp">
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextEmail"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/leaguespartanbold"
-        android:hint="Password" />
+        <TextView
 
-    <EditText
-        android:id="@+id/editTextAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/leaguespartanbold"
-        android:hint="Address"
-        android:layout_below="@id/editTextPassword"
-        android:layout_margin="16dp"/>
+            android:id="@+id/nonDisposableTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/leaguespartanbold"
+            android:text="House Locations"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.046"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.022" />
 
-    <EditText
-        android:id="@+id/editTextPostalCode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextAddress"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/leaguespartanbold"
-        android:hint="Postal Code" />
-
-    <EditText
-        android:id="@+id/editTextPhoneNumber"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextPostalCode"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/leaguespartanbold"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Phone Number" />
-
-    <Spinner
-        android:id="@+id/spinnerCity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/leaguespartanbold"
-        android:layout_below="@id/editTextPhoneNumber"
-        android:layout_margin="16dp"/>
-
-    <CheckBox
-        android:id="@+id/checkBoxAgree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/leaguespartanbold"
-        android:text="Agree to Terms and Conditions"
-        android:layout_below="@id/spinnerCity"
-        android:layout_margin="16dp"/>
-
-    <Button
-        android:id="@+id/buttonSubmit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checkBoxAgree"
-        android:fontFamily="@font/leaguespartanbold"
-        android:layout_margin="16dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginBottom="16dp"
-        android:text="Submit" />
+        <Button
+            android:id="@+id/generateRouteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:text="Navigate" />
 
 
-</RelativeLayout>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
