--- a/app/src/main/res/layout/item_layer.xml
+++ b/app/src/main/res/layout/item_layer.xml
@@ -38,6 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
+            android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="8.45 am"
